k8s/overlays/dev/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mesa-web
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mesa-api
spec:
  replicas: 1
