k8s/overlays/dev/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mesa-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: dev.sociodotabuleiro.app.br
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: mesa-api
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mesa-web
                port:
                  number: 80
  tls:
    - hosts:
        - dev.sociodotabuleiro.app.br
      secretName: dev-sociodotabuleiro-tls
